feat: added phi handling for code generator